--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 remote_theme: pages-themes/merlot@v0.2.0
-   plugins:
-     - jekyll-remote-theme
-   title: Gin Galang
-   description: DevOps Engineer · Full Stack Developer · AI Integration Specialist
+plugins:
+  - jekyll-remote-theme
+title: "Gin Galang"
+description: "DevOps Engineer · Full Stack Developer · AI Integration Specialist"
+show_downloads: false
